src/test/parse-fail/column-offset-1-based.rs
// compile-flags: -Z parse-only

# //~ ERROR 13:1: 13:2: expected `[`, found `<eof>`
